# SignalCascade

./: .gitignore
PyTorch/: .gitignore  README.md  logic_multiframe_candlestick_model.md  profit_maximization_execution_schedule.md  profit_maximization_migration_roadmap.md  pyproject.toml  report_signalcascade_xauusd.md  requirements.txt  requirements_multiframe_candlestick_model.md  review_feedback_comment.md  review_followup_milestones.md  reviewer_submission.md  shape_aware_profit_maximization_model.md
PyTorch/src/signal_cascade_pytorch/: __init__.py  bootstrap.py
PyTorch/src/signal_cascade_pytorch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
PyTorch/src/signal_cascade_pytorch/application/: __init__.py  artifact_manifest.py  artifact_provenance.py  config.py  current_alias.py  dataset_service.py  diagnostics_service.py  inference_service.py  policy_service.py  ports.py  price_scale.py  report_service.py  selection_rank_diagnostics.py  training_service.py  tuning_service.py
PyTorch/src/signal_cascade_pytorch/domain/: __init__.py  candlestick.py  close_anchor.py  entities.py  historical_compatibility.py  timeframes.py
PyTorch/src/signal_cascade_pytorch/infrastructure/: __init__.py  persistence.py
PyTorch/src/signal_cascade_pytorch/infrastructure/data/: __init__.py  csv_source.py  (+1 more)
PyTorch/src/signal_cascade_pytorch/interfaces/: __init__.py  cli.py
PyTorch/tests/: test_artifact_schema.py  test_math_formulas.py  test_policy_consistency.py  test_policy_sweep.py  test_policy_training.py  test_stateful_evaluation.py
(+36 files in other folders)
