[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-cascade-pytorch"
version = "0.1.0"
description = "PyTorch reference implementation for the SignalCascade close-anchor model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3.0",
  "torch>=2.2,<3.0",
]

[project.scripts]
signal-cascade = "signal_cascade_pytorch.interfaces.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
